Alterações nos dto's